[package]
name = "zstring"
version = "0.0.3"
edition = "2021"
repository = "https://github.com/Lokathor/zstring"
license = "Zlib OR Apache-2.0 OR MIT"
description = "Zero-termianted string lib, for use with C FFI."

[dependencies]

[features]
default = []
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg","docs_rs"]
