[package]
name = "zstring"
description = "Zero-termianted string lib, for use with C FFI."
repository = "https://github.com/Lokathor/zstring"
version = "0.2.1"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
ptr_iter = "0.1.0"

[dev-dependencies]
bstr = "1"

[features]
default = []
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg","docs_rs"]
